# macquerel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agents.md  pyproject.toml  settings.json  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: benchmark-regression.yml  ci.yml  docs.yml  release.yml  zizmor.yml
benchmarks/: asv.conf.json  bench_batched.py  bench_circuits.py  bench_density.py  bench_fusion_width.py  bench_mcm.py  bench_memory.py  bench_metal.py  bench_single_gate.py  bench_statevector.py  bench_versions.py  bench_vqe.py  circuits.py  plot_backends.py  plot_metal.py  plot_results.py  plot_steps.py  plot_versions.py  probe_mlx_ceiling.py  run_step_bench.sh
benchmarks/asv_benchmarks/: README.md  __init__.py  batched.py  common.py  density.py  fusion_width.py  mcm.py  memory.py  statevector.py  vqe.py
benchmarks/data/: 1eb61db-p4-complex64.json  3c74da8-p1-defer-eval.json  81e96e3-p2-ondevice-perm.json  README.md  a17db04-baseline.json  b6bef6f-p8-mxcompile.json  batched.json  bedccb3-metal.json  cross_sim.json  cross_sim_combined.json  density.json  framework_comparison.json  fusion_width.json  mcm.json  memory.json  vqe.json
benchmarks/data/large/: aer.json  macquerel-cpu.json  macquerel-metal.json  macquerel-mlx.json  qulacs.json
benchmarks/data/steps/: README.md  step20-baseline-819f8f4-cpu.json  step20-baseline-819f8f4-metal.json  step20-baseline-819f8f4-mlx.json  step22-58cc612-metal.json  step23-7bbc216-mlx.json  step24-bf78f05-mlx.json  step25-bc346fb-metal.json  step26-14cdf74-cpu.json  step26-14cdf74-metal.json  step26-14cdf74-mlx.json  step27-3a742e8-cpu.json  step27-3a742e8-metal.json  step27-3a742e8-mlx.json  step30-3a745fb-cpu.json  step30-3a745fb-metal.json  step30-3a745fb-mlx.json  step32-baseline-56451ac-cpu.json  step32-baseline-56451ac-metal.json  step32-baseline-56451ac-mlx.json  step32-fef6417-mlx.json  step33-4fff625-mlx.json  step34-4e05d01-metal.json  step36-3decb13-mlx.json  step36-baseline-0c4c9dc-mlx.json  step39-baseline-4bf3627-cpu.json  step39-bb230f0-cpu.json  step40-8361126.json  step40-baseline-cb8646c.json
docs/: README.md  backends.md  design_spec.md  getting-started.md  index.md  plan.md  plan_completed.md
docs/how-it-works/: applying-gates.md  backends.md  index.md  noise.md  optimizations.md
docs/reference/: api.md  index.md
docs/stylesheets/: extra.css
src/: CMakeLists.txt
src/macquerel/: __init__.py  batched.py  circuit.py  compiler.py  density.py  gates.py  noise.py  simulator.py  trajectory.py
src/macquerel/adapters/: __init__.py  cirq.py  qiskit.py
src/macquerel/backends/: __init__.py  cpu.py  metal_backend.py  mlx_backend.py
tests/: conftest.py  test_adapters.py  test_backend_protocol.py  test_batched.py  test_circuit.py  test_compiler.py  test_cpu_backend.py  test_density.py  test_edge_cases.py  test_gates.py  test_known_circuits.py  test_metal_backend.py  test_mlx_backend.py  test_noise.py  test_plot_steps.py  test_properties.py  test_simulator.py  test_trajectory.py
tests/benchmarks/: README.md  bench_backends.py
