[project]
name = "macquerel"
version = "0.1.0"
description = "Quantum state-vector simulator for Apple Silicon"
authors = [{name = "Guen Prawiroatmodjo", email = "4041805+guenp@users.noreply.github.com"}]
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.3.0",
    "pytest>=7.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/macquerel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
