[project]
name = "macquerel"
version = "0.1.0"
description = "Quantum state-vector simulator for Apple Silicon"
authors = [{name = "Guen Prawiroatmodjo", email = "4041805+guenp@users.noreply.github.com"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
mlx = ["mlx>=0.3.0"]
metal = ["pyobjc-framework-Metal>=10.0"]
cirq = ["cirq-core>=1.3"]
qiskit = ["qiskit>=1.0"]
viz = ["matplotlib>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/macquerel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
