[project]
name = "macquerel"
version = "0.1.1"
description = "Quantum state-vector simulator for Apple Silicon"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Guen Prawiroatmodjo", email = "4041805+guenp@users.noreply.github.com"}]
keywords = ["quantum", "simulator", "statevector", "apple-silicon", "mlx", "metal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
mlx = ["mlx>=0.3.0"]
metal = ["pyobjc-framework-Metal>=10.0"]
cirq = ["cirq-core>=1.3"]
qiskit = ["qiskit>=1.0"]
viz = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/guenp/macquerel"
Documentation = "https://guenp.github.io/macquerel/"
Repository = "https://github.com/guenp/macquerel"
Changelog = "https://github.com/guenp/macquerel/blob/main/CHANGELOG.md"
Issues = "https://github.com/guenp/macquerel/issues"

# PEP 735 dependency groups — dev tooling that is NOT a runtime dependency.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "ty",
    "zensical",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macquerel"]

# ---- Lint + format: ruff replaces black, isort, flake8, pyupgrade ----
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["macquerel"]

[tool.ruff.lint.per-file-ignores]
# gates.py defines single-letter gate matrices (I, X, Y, Z) — ambiguous-name checks
# (E741/E743) don't apply to standard quantum-gate notation.
"src/macquerel/gates.py" = ["E741", "E743", "RUF001"]
# Tests import backends only after a pytest.importorskip guard (E402), and use
# class-level mutable attrs in fixtures (RUF012).
"tests/**" = ["RUF012", "E402"]
# Benchmark scripts are throwaway harnesses: long lines, inline lambdas, and
# unused locals (kept for readability of the swept parameters) are fine.
"benchmarks/**" = ["E501", "E731", "F841", "RUF001"]
"tests/benchmarks/**" = ["E501", "E731", "F841", "RUF001"]

# ---- Type checking: ty (Astral's type checker) ----
[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# The optional backends (mlx, pyobjc-Metal) are guarded imports: the ignore
# comments on them are needed when the extra is absent (e.g. CI's no-extras lint
# job) but appear "unused" when it's installed. Don't flag that mismatch.
unused-ignore-comment = "ignore"

# ---- Tests + coverage ----
[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = "--tb=short --cov=macquerel"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@overload",
    'if __name__ == "__main__":',
]
